k8s/streamlit.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streamlit
  namespace: default
  labels:
    app: streamlit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: streamlit
  template:
    metadata:
      labels:
        app: streamlit
    spec:
      containers:
      - name: streamlit
        image: quay.io/davidaparicio/streamlit-keycloak:0.7.1
        ports:
        - containerPort: 8501
---
apiVersion: v1
kind: Service
metadata:
  name: streamlit
  namespace: default
spec:
  selector:
    app: streamlit
  ports:
  - port: 80
    targetPort: 8501
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: streamlit
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "selfsigned-issuer"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - streamlit.127.0.0.1.nip.io
    secretName: streamlit-tls
  rules:
  - host: streamlit.127.0.0.1.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: streamlit
            port:
              number: 80
